# Algollection

./: .gitignore  CMakeLists.txt  Untitled Diagram.drawio  algollection  clean.sh  run.sh
test/io/: test.cpp
tools/boj_0.1/: TC.txt  a.out  main.cpp  run.sh
tools/cf_watermelon/: a.out  main.cpp
