cmake_minimum_required(VERSION 3.5)
add_compile_options(-std=c++11 -fPIC)
file(GLOB libpaths ${CMAKE_CURRENT_LIST_DIR}/tools/cxx/*)
foreach(libpath ${libpaths})
    include(${libpath}/CMakeLists.txt)
endforeach()

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE Release)
include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tools/lib)

file(GLOB libpaths ${CMAKE_CURRENT_LIST_DIR}/tools/cxx/*)
foreach(libpath ${libpaths})
    get_filename_component(so ${libpath} NAME)
    include_directories(${libpath}/include)
    file(GLOB_RECURSE cpps ${libpath}/src/*.cpp)
    add_library(${so} SHARED ${cpps})
    set(libs)
    file(GLOB paths_ ${libpath}/tools/cxx/*)
    foreach(path_ ${paths_})
        get_filename_component(lib ${path_} NAME)
        set(libs ${libs} ${path_}/tools/lib/lib${lib}.so)
    endforeach()
    target_link_libraries(${so} ${libs})
    install (TARGETS ${so} LIBRARY DESTINATION .)
endforeach()

set(gtestpath ${CMAKE_CURRENT_LIST_DIR}/tools/googletest)
file(GLOB gtestfiles ${gtestpath}/*)
if(NOT "${gtestfiles}" STREQUAL "")
    get_filename_component(exe ${CMAKE_CURRENT_LIST_DIR} NAME)
    file(GLOB_RECURSE cpps ${CMAKE_CURRENT_LIST_DIR}/app/*.cpp)
    file(GLOB_RECURSE cpps ${cpps} ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
    file(GLOB_RECURSE cpps ${cpps} ${CMAKE_CURRENT_LIST_DIR}/test/*.cpp)
    add_executable(${exe} ${cpps})
    
    include_directories(${gtestpath}/googletest/include)
    target_link_libraries(${exe} ${gtestpath}/lib/libgtest.a
                                 ${gtestpath}/lib/libgtest_main.a)
    target_link_libraries(${exe} pthread)
    set(sos)
    foreach(libpath ${libpaths})
        get_filename_component(so ${libpath} NAME)
        set(sos ${sos} ${CMAKE_CURRENT_LIST_DIR}/tools/lib/lib${so}.so)
    endforeach()
    target_link_libraries(${exe} ${sos})

    install(TARGETS ${exe} DESTINATION .)
endif()
